--- a/src/App.css
+++ b/src/App.css
@@ -191,20 +191,28 @@
 }
 
 .home-login-button {
-
+  background: lightgray;
   margin-left: 180px;
   margin-bottom: 10px;
   width: 300px;
+  height: 40px;
+  border-radius: 8px;
+  box-shadow: 2px 3px #E8EAEA;
 }
 .home-button {
   margin-top: 30px;
 }
 
 /***LOGIN PAGE******/
+.login-logo-img {
+  margin-left: 150px;
+  margin-top: 80px;
+}
 .login-header {
-  margin-left: 260px;
-  margin-top: 30px;
-
+  margin-left: 180px;
+  margin-top: 15px;
+  margin-bottom: 19px;
+  font-size: 25px;
 }
 
 .form-container {
@@ -216,14 +224,81 @@
   padding-bottom: 10px;
   margin-bottom: 10px;
   width: 340px;
+  border: 2px solid darkgray;
+  text-align: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 2px 3px #E8EAEA
 }
 
 .login-button {
-  margin-left: 140px;
-  width: 400px;
+  /*margin-left: 20px;*/
+  width: 340px;
+}
+.login-button-back {
+  margin-left: 10px;
 }
 
+.reglogin-button-container{
+  display: flex;
+  flex-direction: row;
+  margin-left: -200px;
+  margin-top: 20px;
+}
 
+/***REGISTER PAGE******/
+.register-login-context {
+  margin-left: 120px;
+  width: 600px;
+}
+.register-buttonm{
+  display: flex;
+  flex-direction: row;
+}
+.register-header {
+  margin-left: 70px;
+  margin-top: 30px;
+
+}
+.register-logo-img {
+  margin-left: 10px;
+  margin-top: 100px;
+}
+
+.register-container {
+  padding-bottom: 10px;
+  margin-left: 170px;
+
+}
+.register-form {
+
+}
+
+.register-form-namebox1 {
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+  width: 340px;
+  border: 2px solid darkgray;
+  text-align: center;
+  justify-content: center;
+  border-radius: 5px;
+  box-shadow: 2px 3px #E8EAEA
+}
+
+.register-button{
+  margin-left: 140px;
+  width: 100px;
+}
+.register-button1{
+  margin-left: 240px;
+  width: 100px;
+}
+.register-login-button {
+  margin-left: 205px;
+  width: 100px;
+  color: red;
+  font-size: 16px;
+}
 /***NAVBAR******/
 .nav-container {
   width: 30%;
